fix: arreglo etiqueta web deprecada

--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,8 @@
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
+      <!-- Etiqueta estándar (para Android y otras plataformas PWA) -->
+    <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="santo_rosario">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
